--- a/config/database.yml
+++ b/config/database.yml
@@ -82,5 +82,6 @@ test:
 production:
   <<: *default
   database: awesome-rails_production
-  username: awesome-rails
-  password: <%= ENV['AWESOME-RAILS_DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
